--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ header{
 	text-decoration: none;
 	position: sticky;
 	text-align: right;
+	background-color: #ffffff;
 }
 
 .right{
@@ -14,6 +15,8 @@ header{
 main{
 	padding-top: 50px;
 	text-align: center;
+	background-color: #fff8ff;
+	padding-bottom:350px;
 }
 .navigation-item{
 	text-decoration: none;
@@ -29,6 +32,5 @@ a{
 
 footer{
 	text-align: center;
-	padding-top:400px; 
 }
 }
