--- a/style.css
+++ b/style.css
@@ -5,18 +5,125 @@ header{
 	position: sticky;
 	text-align: right;
 	background-color: #ffffff;
+	font-family: "Sawarabi Mincho";
 }
 
+.wf-sawarabimincho { font-family: "Sawarabi Mincho"; }
+
 .right{
-	padding-top: 50px;
+	padding-top: 30px;
 	padding-left: 700px;
+
+	}
+	p{
+		padding-right: 300px;
+		font-size: 25px;
+		line-height: 10px;
 	}
 
+img.pic{
+	float: left;
+	padding-left: 200px;
+	padding-top:50px;
+}
+
+.maru {
+  display: inline-block;
+  text-decoration: none;
+  background: #ff1493;
+  color: #FFF;
+  width: 200px;
+  height: 150px;
+  line-height: 150px;
+  border-radius: 50%;
+  text-align: center;
+  overflow: hidden;
+  box-shadow: 0px 0px 0px 5px #ff1493;
+  border: dashed 1px #FFF;
+  transition: .4s;
+  margin-right:30px;
+
+}
+
+.maru:hover {
+  background: #fff;
+  box-shadow: 0px 0px 0px 5px #ffccff;
+  color: #ff1493;
+}
+
+.kokugo{
+	display: inline-block;
+  text-decoration: none;
+  background:#cc0000;
+  color: #FFF;
+  width: 100px;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 5%;
+  text-align: center;
+  overflow: hidden;
+  box-shadow: 0px 0px 0px 5px #cc0000;
+  border: dashed 1px #FFF;
+  transition: .4s;
+  margin-right:10px;
+}
+.kokugo:hover {
+  background: #fff;
+  box-shadow: 0px 0px 0px 5px #cc5252;
+  color: #cc0000;
+}
+
+.shakai{
+	display: inline-block;
+  text-decoration: none;
+  background: #800000;
+  color: #FFF;
+  width: 100px;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 5%;
+  text-align: center;
+  overflow: hidden;
+  box-shadow: 0px 0px 0px 5px #800000;
+  border: dashed 1px #FFF;
+  transition: .4s;
+  margin-right:10px;
+}
+.shakai:hover {
+  background: #fff;
+  box-shadow: 0px 0px 0px 5px #cc0000;
+  color: #800000;
+}
+
+.other{
+	display: inline-block;
+  text-decoration: none;
+  background:#ff33a0;
+  color: #FFF;
+  width: 100px;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 5%;
+  text-align: center;
+  overflow: hidden;
+  box-shadow: 0px 0px 0px 5px #ff33a0;
+  border: dashed 1px #FFF;
+  transition: .4s;
+  margin-right:10px;
+}
+.other:hover {
+  background: #fff;
+  box-shadow: 0px 0px 0px 5px #ff0088;
+  color: #ff33a0;
+}
+
 main{
+	line-height: 70px;
 	padding-top: 50px;
 	text-align: center;
 	background-color: #fff8ff;
-	padding-bottom:350px;
+	padding-bottom:150px;
+	font-family: "Sawarabi Mincho";
 }
 .navigation-item{
 	text-decoration: none;
@@ -25,12 +132,32 @@ main{
 	margin-right: 10px;
 	}
 
+.kanome{
+	font-size: 80px;
+}
+
 a{
 	text-decoration: none;
 	color: black;
+	position: relative;
+	display: inline-block;
+	transition: 0.5s;
+}
+
+a:hover{
+	color: #ff1493;
 }
 
 footer{
 	text-align: center;
+}
+h5{
+	font-size: 20px;
+	margin-top: 10px;
+}
+h4 {
+  color: #ff1493;
+  border-bottom: dashed 2px #ff1493;
+  font-size: 20px;
 }
 }
