--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+@import "compass/css3";
 @media screen and (min-width: 1100px){
 header{
 	text-decoration: none;
@@ -11,20 +12,27 @@ header{
 .wf-sawarabimincho { font-family: "Sawarabi Mincho"; }
 
 .right{
-	padding-top: 30px;
-	padding-left: 630px;
-
+	position: absolute;
+	left: 800px;
+	top: 100px;
 	}
+	
 	p{
 		padding-right: 200px;
 		font-size: 20px;
 		line-height: 10px;
+
 	}
 
-img.pic{
-	float: left;
-	padding-left: 150px;
-	padding-top:50px;
+
+.head{
+	position: relative;
+	background-image: url(header.jpg);
+	background-size: contain;
+	width: 100%;
+	height: 450px;
+	background-repeat: no-repeat;
+	background-position: 150px 30px;
 }
 
 .maru {
@@ -160,4 +168,17 @@ h4 {
   border-bottom: dashed 2px #ff1493;
   font-size: 20px;
 }
+
+span{
+	font-size: 20px;
+	margin-right:2px;
+	display: inline-block;
+	animation:rotate-anime 5s ease-in-out infinite;
+}
+
+@keyframes rotate-anime {
+ 100%{ transform: rotateX(360deg) }
+}
+
+
 }
