--- a/style.css
+++ b/style.css
@@ -1,5 +1,26 @@
 
 @import "compass/css3";
+
+html{
+	animation-name: fade-in;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fade-in {
+    0% {
+      opacity: 0;
+      transform: translate3d(-30px, -30px, 0);
+    }
+    100% {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+}
 @media screen and (min-width: 1100px){
 header{
 	text-decoration: none;
@@ -158,6 +179,34 @@ a:hover{
 
 footer{
 	text-align: center;
+}
+
+h1{
+	position: relative;
+}
+h1 span{
+	font-size: 30px;
+}
+
+.item:hover{
+	background: #ff1493;
+	height:30px;
+	border-radius: 60%;
+}
+
+h1 span:nth-child(1){	left:-4.2em; animation: bound-anim 3.0s 0.0s infinite;}
+h1 span:nth-child(2){	left:-2.8em; animation: bound-anim 3.0s 0.2s infinite;}
+h1 span:nth-child(3){	left:-1.4em; animation: bound-anim 3.0s 0.4s infinite;}
+h1 span:nth-child(4){	left: 0.0em; animation: bound-anim 3.0s 0.6s infinite;}
+h1 span:nth-child(5){	left: 1.4em; animation: bound-anim 3.0s 0.8s infinite;}
+h1 span:nth-child(6){	left: 2.8em; animation: bound-anim 3.0s 1.0s infinite;}
+h1 span:nth-child(7){	left: 4.2em; animation: bound-anim 3.0s 1.2s infinite;}
+
+@keyframes bound-anim {
+	0%,100% {top: 0;transform: scale(1);}
+	30% {top: -25%;}
+	50% {transform: scale(1);}
+	90% {top: 0;transform: scale(1.2,0.8);}
 }
 h5{
 	font-size: 20px;
